set min width to prevent breaking on smaller screen

--- a/app.scss
+++ b/app.scss
@@ -155,6 +155,7 @@ $game-board-background: #fff;
   flex-flow: column;
   align-items: center;
   justify-content: flex-end;
+  min-width: 40rem;
   background: $game-board-background;
 }
 
